# UnicornEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  UnicornEngine.sln  fbx definitions.txt  feature shopping list.txt  shopping budget.txt  vs-chromium-project.txt
src/: CMakeLists.txt  UnicornEngine.cpp
src/animation/: CMakeLists.txt
src/assets/: CMakeLists.txt  assetsheader.h
src/assets/animation/clip/: animclipasset.h
src/assets/animation/pose/: skeletonasset.h
src/assets/file/: assetfiledata.h
src/assets/file/fbx/: fbxfileasset.cpp  fbxfileasset.h
src/assets/file/gltf/: gltffileasset.cpp  gltffileasset.h
src/assets/geometry/: cube.cpp  cube.h  geometry.h  vertex.h
src/assets/material/: materialasset.h
src/assets/mesh/: meshasset.cpp  meshasset.h  meshdata.cpp  meshdata.h
src/assets/texture/: textureasset.h
src/client/: CMakeLists.txt  clientheader.h  unicornclient.cpp
src/client/windows/: windowsclient.cpp  windowsclient.h
src/core/: CMakeLists.txt  coreheader.h
src/core/component/: component.h
src/core/container/: dict.h  tuple.h
src/core/core/: core.cpp  core.h
src/core/entity/: entity.cpp  entity.h
src/core/filesystem/: filesystem.cpp  filesystem.h
src/core/gameobject/: gameobject.cpp  gameobject.h
src/core/input/: inputmanager.cpp  inputmanager.h
src/core/math/: color.h  eulerangles.h  math.h  matrix4f.h  matrix4x4f.h  quaternion4f.h  transform.h  vector4f.h
src/core/memory/: memory.h
src/core/memory/manager/: memorymanager.cpp
src/core/network/base/: networkbase.h
src/core/network/client/: networkclient.cpp  networkclient.h
src/core/network/thread/: networkthread.cpp  networkthread.h
src/core/scene/: scene.cpp  scene.h
src/core/serializer/: serializer.h
src/core/thread/base/: threadbase.h
src/core/thread/job/: jobbase.h  jobmanager.cpp  jobmanager.h
src/core/thread/manager/: threadmanager.cpp  threadmanager.h
src/core/windows/windowmanager/: windowmanager.cpp  windowmanager.h
src/editor/: CMakeLists.txt  unicorneditor.cpp
src/editor/editor/: editor.cpp  editor.h
src/editor/editor/objecthierarchy/: objecthierarchyeditor.h
src/editor/editor/serializer/: editorserializer.cpp  editorserializer.h
src/editor/network/client/: editornetworkclient.cpp  editornetworkclient.h
src/editor/qt/assetbrowser/: qtassetbrowser.cpp  qtassetbrowser.h  qtassetbrowser.ui
src/editor/qt/editorwindow/: qteditorwindow.cpp  qteditorwindow.h  qteditorwindow.ui
src/editor/qt/objecthierarchy/: qtobjecthierarchy.cpp  qtobjecthierarchy.h  qtobjecthierarchy.ui
src/editor/qt/property/inspector/: qtpropertyinspector.cpp  qtpropertyinspector.h  qtpropertyinspector.ui
src/editor/qt/sceneviewer/: qtsceneviewer.cpp  qtsceneviewer.h  qtsceneviewer.ui
src/engine/: CMakeLists.txt  engine.cpp  engine.h  engineheader.h
src/engine/animation/: CMakeLists.txt
src/engine/assets/: CMakeLists.txt  assetsheader.h
src/engine/assets/file/: assetfiledata.h
src/engine/assets/file/fbx/: fbxfileasset.cpp  fbxfileasset.h
src/engine/assets/file/gltf/: gltffileasset.cpp  gltffileasset.h
src/engine/assets/geometry/: cube.h  geometry.h  vertex.h
src/engine/assets/material/: materialasset.h
src/engine/assets/mesh/: meshasset.cpp  meshasset.h
src/engine/assets/texture/: textureasset.h
src/engine/core/: CMakeLists.txt  coreheader.h
src/engine/core/container/: dict.h  list.h  ordereddict.h  string.h  tuple.h
src/engine/core/filesystem/: filesystem.cpp  filesystem.h
src/engine/core/logging/: log.h
src/engine/core/math/: color.h  eulerangles.h  math.h  matrix4x4f.h  projection.h  quaternion4f.h  transform.h  vector4f.h
src/engine/core/memory/: memory.h
src/engine/core/memory/allocator/: pageallocator.cpp  pageallocator.h
src/engine/core/memory/manager/: memorymanager.cpp  memorymanager.h
src/engine/core/network/base/: networkbase.cpp  (+1 more)
src/engine/core/objectmodel/: object.h
src/engine/core/serializer/: serializer.h
src/engine/core/thread/: thread.h
src/engine/debugging/: CMakeLists.txt  debuggingheader.h
src/engine/editor/server/: editornetworkserver.cpp  editornetworkserver.h
src/engine/engine/: engine.cpp  engine.h
src/engine/gamecore/: CMakeLists.txt  gamecoreheader.h
src/engine/gamecore/component/: component.h
src/engine/gamecore/components/: rendercomponent.cpp  rendercomponent.h  transformcomponent.cpp  transformcomponent.h
src/engine/gamecore/entity/: entity.cpp  entity.h
src/engine/gamecore/scene/: scene.cpp  scene.h
src/engine/input/: CMakeLists.txt  inputheader.h
src/engine/input/gamepad/: gamepadinput.cpp  gamepadinput.h
src/engine/input/imgui/: inputimguipage.cpp  inputimguipage.h
src/engine/input/keyboard/: keyboardinput.cpp  keyboardinput.h
src/engine/input/manager/: inputmanager.cpp  inputmanager.h
src/engine/platform/: CMakeLists.txt
src/engine/platform/windows/: windowsplatform.cpp  windowsplatform.h
src/engine/render/: CMakeLists.txt  renderheader.h
src/engine/render/camera/: cameraobject.cpp  cameraobject.h
src/engine/render/manager/: rendermanager.cpp  rendermanager.h
src/engine/render/material/: materialobject.h
src/engine/render/mesh/: meshobject.h
src/engine/render/object/: renderobject.h
src/engine/render/texture/: textureobject.h
src/engine/scene/: scene.cpp  scene.h
src/engine/state/: enginestatemachine.h
src/game/: CMakeLists.txt
src/game/testgame/: testscene.cpp  testscene.h
src/game/testgame/components/: fpscameracontroller.cpp  fpscameracontroller.h
src/platform/: CMakeLists.txt
src/platform/windows/: windowsplatform.cpp  windowsplatform.h
src/render/: CMakeLists.txt  renderheader.h
src/render/camera/: cameraobject.cpp  cameraobject.h
src/render/component/: rendercomponent.cpp  rendercomponent.h
src/render/components/: rendercomponent.h
src/render/manager/: rendermanager.cpp  rendermanager.h
src/render/material/: materialobject.h
src/render/mesh/: meshobject.cpp  meshobject.h
src/render/object/: renderobject.cpp  renderobject.h
src/render/texture/: textureobject.cpp  textureobject.h
(+53 files in other folders)
