# src/client/CMakeLists.txt
# cmake_minimum_required (VERSION 3.20)
# message("hello from src/client/CMakeLists.txt")
# 
# set(UNICORN_CLIENT
#     "unicornclient.cpp"
#     )
#     
# add_library(Client
#             "${UNICORN_CLIENT}"
#             )
# 
# target_include_directories(Client PRIVATE
#             "${PROJECT_SOURCE_DIR}"
#             "${PROJECT_SOURCE_DIR}/src/"
#             "${PROJECT_SOURCE_DIR}/src/client"
#             )
# 
# target_link_libraries(Client PRIVATE Engine)